fix horizontal shadow elements

--- a/public/index.html
+++ b/public/index.html
@@ -284,160 +284,165 @@
 
     <!-- latest posts -->
     <section id="latest-posts">
+        <div class="heading-wrapper">
+            <h2>Latest</h2>
+        </div>
+        
         <div class="wrapper">
-            <div class="head-wrap">
-                <h2>Latest</h2>
+            <div class="content">
+                <article class="it-support">
+                    <a class="category" href="https://www.netmatters.co.uk/news/it-support" title="View all: IT Support / News">
+                        News
+                        <div class="tooltip-wrapper">
+                            <div class="tooltip-content">
+                                <p>View all: IT Support / News</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="lead" href="https://www.netmatters.co.uk/happy-25th-birthday-kati">
+                        <picture>
+                            <source srcset="img/blog-posts/happy-25th-birthday-kati.webp" type="image/webp">
+                            <source srcset="img/blog-posts/happy-25th-birthday-kati.jpg" type="image/jpeg">
+                            <img src="img/blog-posts/happy-25th-birthday-kati.jpg" alt="Happy 25th Birthday Kati">
+                        </picture>
+                    </a>
+                    <a href="https://www.netmatters.co.uk/happy-25th-birthday-kati"><h3>
+                        Happy 25th Birthday Kati!
+                    </h3></a>
+                    <p>Since joining Netmatters Kati has done a fantastic job keeping our IT projects progressing&#8230;</p>
+                    <a class="button" href="https://www.netmatters.co.uk/happy-25th-birthday-kati" aria-label="Read more about Kati.">
+                        Read More
+                    </a>
+                    <div class="poster">
+                        <picture>
+                            <source srcset="img/netmatters-brand/logo-small.webp" type="image/webp">
+                            <source srcset="img/netmatters-brand/logo-small.png" type="image/png">
+                            <img src="img/netmatters-brand/logo-small.png" alt="Netmatters Ltd">
+                        </picture>
+                        <p>Posted by Netmatters Ltd</p>
+                        <p class="date">18th December 2020</p>
+                    </div>
+                </article>
+
+                <article class="it-support">
+                    <a class="category" href="https://www.netmatters.co.uk/case-studies/it-support" title="View all: IT Support / Case Studies">
+                        Case Studies
+                        <div class="tooltip-wrapper">
+                            <div class="tooltip-content">
+                                <p>View all: IT Support / Case Studies</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="lead" href="https://www.netmatters.co.uk/zsea-it-support-case-study">
+                        <picture>
+                            <source srcset="img/blog-posts/zsea-it-support.webp" type="image/webp">
+                            <source srcset="img/blog-posts/zsea-it-support.jpg" type="image/jpeg">
+                            <img src="img/blog-posts/zsea-it-support.jpg" alt="ZSEA IT Support Case Study Netmatters">
+                        </picture>
+                    </a>
+                    <a href="https://www.netmatters.co.uk/zsea-it-support-case-study"><h3>
+                        ZSEA IT Support Case Study
+                    </h3></a>
+                    <p>As the world continues to change, and businesses evolve, they need to look to ways of futurep&#8230;</p>
+                    <a class="button" href="https://www.netmatters.co.uk/zsea-it-support-case-study" aria-label="Read the case study on ZSEA IT support.">
+                        Read More
+                    </a>
+                    <div class="poster">
+                        <picture>
+                            <source srcset="img/netmatters-brand/logo-small.webp" type="image/webp">
+                            <source srcset="img/netmatters-brand/logo-small.png" type="image/png">
+                            <img src="img/netmatters-brand/logo-small.png" alt="Netmatters Ltd">
+                        </picture>
+                        <p>Posted by Netmatters Ltd</p>
+                        <p class="date">10th December 2020</p>
+                    </div>
+                </article>
+
+                <article class="bespoke-software">
+                    <a class="category" href="https://www.netmatters.co.uk/our-careers/bespoke-software" title="View all: Bespoke Software / Careers">
+                        Careers
+                        <div class="tooltip-wrapper">
+                            <div class="tooltip-content">
+                                <p>View all: Bespoke Software / Careers</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="lead" href="https://www.netmatters.co.uk/our-careers/senior-web-developer">
+                        <picture>
+                            <source srcset="img/blog-posts/senior-web-developer.webp" type="image/webp">
+                            <source srcset="img/blog-posts/senior-web-developer.jpg" type="image/jpeg">
+                            <img src="img/blog-posts/senior-web-developer.jpg" alt="Senior Web Developer">
+                        </picture>
+                    </a>
+                    <a href="https://www.netmatters.co.uk/our-careers/senior-web-developer"><h3>
+                        Senior Web Developer
+                    </h3></a>
+                    <p>Salary Range: £30,000 - £40,000 (DOE) + Bonus Hours: 40 hours per week, Monday - Friday Loc&#8230;</p>
+                    <a class="button" href="https://www.netmatters.co.uk/our-careers/senior-web-developer" aria-label="Learn more about the senior web developer job opening.">
+                        Read More
+                    </a>
+                    <div class="poster">
+                        <picture>
+                            <source srcset="img/blog-posts/simon-wright.webp" type="image/webp">
+                            <source srcset="img/blog-posts/simon-wright.jpg" type="image/jpeg">
+                            <img src="img/blog-posts/simon-wright.jpg" alt="Simon Wright">
+                        </picture>
+                        <p>Posted by Simon Wright</p>
+                        <p class="date">10th December 2020</p>
+                    </div>
+                </article>
             </div>
-            <article class="it-support">
-                <a class="category" href="https://www.netmatters.co.uk/news/it-support" title="View all: IT Support / News">
-                    News
-                    <div class="tooltip-wrapper">
-                        <div class="tooltip-content">
-                            <p>View all: IT Support / News</p>
-                        </div>
-                    </div>
-                </a>
-                <a class="lead" href="https://www.netmatters.co.uk/happy-25th-birthday-kati">
-                    <picture>
-                        <source srcset="img/blog-posts/happy-25th-birthday-kati.webp" type="image/webp">
-                        <source srcset="img/blog-posts/happy-25th-birthday-kati.jpg" type="image/jpeg">
-                        <img src="img/blog-posts/happy-25th-birthday-kati.jpg" alt="Happy 25th Birthday Kati">
-                    </picture>
-                </a>
-                <a href="https://www.netmatters.co.uk/happy-25th-birthday-kati"><h3>
-                    Happy 25th Birthday Kati!
-                </h3></a>
-                <p>Since joining Netmatters Kati has done a fantastic job keeping our IT projects progressing&#8230;</p>
-                <a class="button" href="https://www.netmatters.co.uk/happy-25th-birthday-kati" aria-label="Read more about Kati.">
-                    Read More
-                </a>
-                <div class="poster">
-                    <picture>
-                        <source srcset="img/netmatters-brand/logo-small.webp" type="image/webp">
-                        <source srcset="img/netmatters-brand/logo-small.png" type="image/png">
-                        <img src="img/netmatters-brand/logo-small.png" alt="Netmatters Ltd">
-                    </picture>
-                    <p>Posted by Netmatters Ltd</p>
-                    <p class="date">18th December 2020</p>
-                </div>
-            </article>
-
-            <article class="it-support">
-                <a class="category" href="https://www.netmatters.co.uk/case-studies/it-support" title="View all: IT Support / Case Studies">
-                    Case Studies
-                    <div class="tooltip-wrapper">
-                        <div class="tooltip-content">
-                            <p>View all: IT Support / Case Studies</p>
-                        </div>
-                    </div>
-                </a>
-                <a class="lead" href="https://www.netmatters.co.uk/zsea-it-support-case-study">
-                    <picture>
-                        <source srcset="img/blog-posts/zsea-it-support.webp" type="image/webp">
-                        <source srcset="img/blog-posts/zsea-it-support.jpg" type="image/jpeg">
-                        <img src="img/blog-posts/zsea-it-support.jpg" alt="ZSEA IT Support Case Study Netmatters">
-                    </picture>
-                </a>
-                <a href="https://www.netmatters.co.uk/zsea-it-support-case-study"><h3>
-                    ZSEA IT Support Case Study
-                </h3></a>
-                <p>As the world continues to change, and businesses evolve, they need to look to ways of futurep&#8230;</p>
-                <a class="button" href="https://www.netmatters.co.uk/zsea-it-support-case-study" aria-label="Read the case study on ZSEA IT support.">
-                    Read More
-                </a>
-                <div class="poster">
-                    <picture>
-                        <source srcset="img/netmatters-brand/logo-small.webp" type="image/webp">
-                        <source srcset="img/netmatters-brand/logo-small.png" type="image/png">
-                        <img src="img/netmatters-brand/logo-small.png" alt="Netmatters Ltd">
-                    </picture>
-                    <p>Posted by Netmatters Ltd</p>
-                    <p class="date">10th December 2020</p>
-                </div>
-            </article>
-
-            <article class="bespoke-software">
-                <a class="category" href="https://www.netmatters.co.uk/our-careers/bespoke-software" title="View all: Bespoke Software / Careers">
-                    Careers
-                    <div class="tooltip-wrapper">
-                        <div class="tooltip-content">
-                            <p>View all: Bespoke Software / Careers</p>
-                        </div>
-                    </div>
-                </a>
-                <a class="lead" href="https://www.netmatters.co.uk/our-careers/senior-web-developer">
-                    <picture>
-                        <source srcset="img/blog-posts/senior-web-developer.webp" type="image/webp">
-                        <source srcset="img/blog-posts/senior-web-developer.jpg" type="image/jpeg">
-                        <img src="img/blog-posts/senior-web-developer.jpg" alt="Senior Web Developer">
-                    </picture>
-                </a>
-                <a href="https://www.netmatters.co.uk/our-careers/senior-web-developer"><h3>
-                    Senior Web Developer
-                </h3></a>
-                <p>Salary Range: £30,000 - £40,000 (DOE) + Bonus Hours: 40 hours per week, Monday - Friday Loc&#8230;</p>
-                <a class="button" href="https://www.netmatters.co.uk/our-careers/senior-web-developer" aria-label="Learn more about the senior web developer job opening.">
-                    Read More
-                </a>
-                <div class="poster">
-                    <picture>
-                        <source srcset="img/blog-posts/simon-wright.webp" type="image/webp">
-                        <source srcset="img/blog-posts/simon-wright.jpg" type="image/jpeg">
-                        <img src="img/blog-posts/simon-wright.jpg" alt="Simon Wright">
-                    </picture>
-                    <p>Posted by Simon Wright</p>
-                    <p class="date">10th December 2020</p>
-                </div>
-            </article>
         </div>
     </section>
 
     <!-- clients -->
     <section id="clients">
-        <h2>Clients</h2>
-        <div class="badge">
-            <!-- badges given in colour and greyscale version, styled so only one is shown.
-                Ideally would use CSS image filters to make the image greyscale, but not supported in IE11 -->
-            <img class="colour" src="img/partner-brands/busseys-colour.png" alt="Busseys logo">
-            <img class="bw" src="img/partner-brands/busseys-bw.png" alt="Busseys logo">
-            <div class="tooltip-wrapper">
-                <div class="tooltip-content">
-                    <h3>Busseys</h3>
-                    <p>One of the UK's leading Ford dealerships.</p>
+        <div class="wrapper">
+            <h2>Clients</h2>
+            <div class="badge">
+                <!-- badges given in colour and greyscale version, styled so only one is shown.
+                    Ideally would use CSS image filters to make the image greyscale, but not supported in IE11 -->
+                <img class="colour" src="img/partner-brands/busseys-colour.png" alt="Busseys logo">
+                <img class="bw" src="img/partner-brands/busseys-bw.png" alt="Busseys logo">
+                <div class="tooltip-wrapper">
+                    <div class="tooltip-content">
+                        <h3>Busseys</h3>
+                        <p>One of the UK's leading Ford dealerships.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="badge">
-            <a href="https://www.netmatters.co.uk/new-website-developed-for-crane-garden-buildings">
-                <img class="colour" src="img/partner-brands/crane-colour.png" alt="Crane Garden Buildings logo">
-                <img class="bw" src="img/partner-brands/crane-bw.png" alt="Crane Garden Buildings logo">
-            </a>
-            <div class="tooltip-wrapper">
-                <div class="tooltip-content">
-                    <h3>Crane Garden Builders</h3>
-                    <p>Leading manufacturer and supplier of high-end garden rooms, summerhouses, workshops and sheds in the UK.</p>
+            <div class="badge">
+                <a href="https://www.netmatters.co.uk/new-website-developed-for-crane-garden-buildings">
+                    <img class="colour" src="img/partner-brands/crane-colour.png" alt="Crane Garden Buildings logo">
+                    <img class="bw" src="img/partner-brands/crane-bw.png" alt="Crane Garden Buildings logo">
+                </a>
+                <div class="tooltip-wrapper">
+                    <div class="tooltip-content">
+                        <h3>Crane Garden Builders</h3>
+                        <p>Leading manufacturer and supplier of high-end garden rooms, summerhouses, workshops and sheds in the UK.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="badge">
-            <img class="colour" src="img/partner-brands/beat-colour.png" alt="Beat logo">
-            <img class="bw" src="img/partner-brands/beat-bw.png" alt="Beat logo">
-            <div class="tooltip-wrapper">
-                <div class="tooltip-content">
-                    <h3>Beat</h3>
-                    <p>The UK's eating disorder charity founded in 1989.</p>
+            <div class="badge">
+                <img class="colour" src="img/partner-brands/beat-colour.png" alt="Beat logo">
+                <img class="bw" src="img/partner-brands/beat-bw.png" alt="Beat logo">
+                <div class="tooltip-wrapper">
+                    <div class="tooltip-content">
+                        <h3>Beat</h3>
+                        <p>The UK's eating disorder charity founded in 1989.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="badge">
-            <a href="https://www.netmatters.co.uk/new-northern-diver-website-is-live">
-                <img class="colour" src="img/partner-brands/northern-diver-colour.png" alt="Northern Diver logo">
-                <img class="bw" src="img/partner-brands/northern-diver-bw.png" alt="Northern Diver logo">
-            </a>
-            <div class="tooltip-wrapper">
-                <div class="tooltip-content">
-                    <h3>Northern Diver</h3>
-                    <p>Global water based equipment manufacturers for sport, military, commercial and rescue businesses.</p>
+            <div class="badge">
+                <a href="https://www.netmatters.co.uk/new-northern-diver-website-is-live">
+                    <img class="colour" src="img/partner-brands/northern-diver-colour.png" alt="Northern Diver logo">
+                    <img class="bw" src="img/partner-brands/northern-diver-bw.png" alt="Northern Diver logo">
+                </a>
+                <div class="tooltip-wrapper">
+                    <div class="tooltip-content">
+                        <h3>Northern Diver</h3>
+                        <p>Global water based equipment manufacturers for sport, military, commercial and rescue businesses.</p>
+                    </div>
                 </div>
             </div>
         </div>
