create cloned header

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
 
     <div class="page-scrim-holder">
         <div class="page-content">
+            <div class="header-clone-holder"></div>
         
             <div class="first-container">
                 <div class="sticky-header">
