add floating header

--- a/src/index.html
+++ b/src/index.html
@@ -39,10 +39,8 @@
     </div>
     </section>
 
-    <div class="page-scrim-holder">
+    <div class="page-holder">
         <div class="page-content">
-            <div class="header-clone-holder"></div>
-        
             <div class="first-container">
                 <div class="sticky-header">
                     <!-- header -->
@@ -672,7 +670,7 @@
             </section>
 
         </div> <!-- class="page-content" -->
-    </div> <!-- class="page-scrim-holder" -->
+    </div> <!-- class="page-holder" -->
 
     <div class="menu-content">
     <ul class="menu-services">
